--- a/sub_mom.html
+++ b/sub_mom.html
@@ -116,40 +116,19 @@
                   </form>
               </div>
               <!--search-->
-              <div id="menu-container">
-                <div id="menu-wrapper">
-                    <div id="hamburger-menu"><span></span><span></span><span></span></div>
+              <div>
+                <div>
+                    <div><span></span><span></span><span></span></div>
                     <!-- hamburger-menu -->
                 </div>
                 <!-- menu-wrapper -->
-                <ul class="menu-list accordion">
-                    <li id="nav1" class="toggle accordion-toggle"> 
-                        <span class="icon-plus"></span>
-                        <a class="menu-link" href="#"></a>
+                <ul class=>
+                    <li> 
+                        <span></span>
+                        <a ></a>
                     </li>
-                    <ul class="menu-submenu accordion-content">
-                      <li class="ft"><a href="#">로그인</a></li>
-                      <li class="ft"><a href="#">회원가입</a></li>
-                      <li class="ft"><a href="#">장바구니</a></li>
-                      <li class="ft" id="ftt"><a href="#">고객센터</a></li>
-                      <li><a href="#">퓨레</a></li>
-                      <li><a href="#">아기간식</a></li>
-                      <li><a href="#">그릭요거트</a></li>
-                      <li><a href="#">아기영양제</a></li>
-                      <li><a href="#">기획전</a></li>
-                      <li><a href="#">진행중인 이벤트</a></li>
-                      <li><a href="#">처음이세요</a></li>
-                      <li><a href="#">제품단계안내</a> </li>
-                      <li><a href="#">맘마셰프 식단표</a></li>
-                      <li><a href="#">식재료 안내</a></li>
-                      <li><a href="#">배송안내</a></li>
-                      <li><a href="#">먹이는 법</a></li>
-                      <li><a href="#">맘마셰프 혜택 안내</a></li>
-                      <li><a href="#">맘마셰프 소개</a></li>
-                      <li><a href="#">맘마셰프TV</a></li>
-                      <li><a href="#">맘마셰프 Awards</a></li>
-                      <li><a href="#">맘마셰프 영양상담</a></li>
-                      <li><a href="#">맘마셰프 매거진</a></li>
+                    <ul>
+
                     </ul> 
                 </ul>
                 <!-- menu-list accordion-->
@@ -159,11 +138,11 @@
           <div id="lnb">
               <div id="nav">
                   <ul class="nav_bar">
-                      <li class="nav_bg"><a href="#">빠른주문하기</a></li>
-                      <li class="nav_bg2"><a href="#">맘마셰프스토리</a></li>
-                      <li class="nav_bg2"><a href="#">골라담기</a></li>
-                      <li class="nav_bg2"><a href="#">이벤트 혜택</a></li>
-                      <li class="nav_bg2"><a href="#">마이페이지</a></li>
+                    <li class="nav_bg2"><a href="#a">이유식</a></li>
+                    <li class="nav_bg2"><a href="#b">유아식</a></li>
+                    <li class="nav_bg2"><a href="#c">단계체크</a></li>
+                    <li class="nav_bg2"><a href="#d">친환경유기농</a></li>
+                    <li class="nav_bg2"><a href="#e">육아해결</a></li>
                   </ul>
                   
                   <div id="flip"><a class="cssicon hamburger" data-morph="hamburger close" href="#"><span></span></a>
